--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "module": "index.js",
+  "type": "module",
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
